[gd_scene load_steps=2 format=3 uid="uid://xafu2j0ocyyx"]

[ext_resource type="Script" uid="uid://bjiore6hmn6yf" path="res://office_scene.gd" id="1_6kfy7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_right = 43.0
offset_bottom = 40.0
script = ExtResource("1_6kfy7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TheOfficeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "The Office"

[node name="ViewRoster_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "View Roster"

[node name="SelectMission_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Mission"

[node name="RosterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/ViewRoster_btn" to="." method="_on_view_roster_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectMission_btn" to="." method="_on_select_mission_btn_pressed"]
